# CV-3

./: CMakeLists.txt  ~$reenshots.docx
src/: classifyImages.cpp  classifyImagesKNN.cpp  computeFeatures.cpp  morphologicalFilter.cpp  objectRecogFunctions.cpp  objectRecogFunctions.h  segmentImages.cpp  segmentImagesCV.cpp  threshold.cpp  trainingData.cpp
